Kullanılan veriler eklendi, uygulamanın daha iyi anlaşılması için açıklama yapıldı ve görseller eklendi, requirements eklendi

--- a/Prototip.ipynb
+++ b/Prototip.ipynb
@@ -98,7 +98,7 @@
         "id": "Urwinz4-RJ_e"
       },
       "source": [
-        "# **Building Music Recommendation System using Spotify Dataset**\n"
+        "# **Spotify Veri Setleri ile Şarkı Öneri Sistemi**"
       ]
     },
     {
@@ -107,7 +107,7 @@
         "id": "Td_7rdx2RJ_f"
       },
       "source": [
-        "# **Import Libraries**"
+        "# **Kütüphane Yükleme**"
       ]
     },
     {
@@ -153,7 +153,7 @@
         "id": "261i0iHIRJ_f"
       },
       "source": [
-        "# **Read Data**"
+        "# **Verileri Okuma"
       ]
     },
     {
@@ -302,7 +302,7 @@
         "id": "rA0kAThRRJ_g"
       },
       "source": [
-        "# **Data Understanding by Visualization and EDA**"
+        "# **Veri Görselleştirmesi**"
       ]
     },
     {
@@ -311,9 +311,9 @@
         "id": "YUvnHgKbRJ_g"
       },
       "source": [
-        "# **Music Over Time**\n",
+        "# **Yıllara Göre Müzik**\n",
         "\n",
-        "Using the data grouped by year, we can understand how the overall sound of music has changed from 1921 to 2020."
+        "Yıllara göre gruplandırılmış verileri kullanarak müziğin 1921 ve 2020 yılları arasındaki değişimini görmekteyiz."
       ]
     },
     {
@@ -403,7 +403,7 @@
         "id": "joARraJFRJ_h"
       },
       "source": [
-        "# **Characteristics of Different Genres**\n"
+        "# **Türlere Atanan Parametreler**\n"
       ]
     },
     {
@@ -440,7 +440,7 @@
         "id": "onCC8zwKRJ_h"
       },
       "source": [
-        "# **Clustering Genres with K-Means**\n"
+        "# **Şarkı Türlerinin Görselleştirilmesi**\n"
       ]
     },
     {
@@ -539,7 +539,7 @@
         "id": "vjpGEgFaRJ_h"
       },
       "source": [
-        "# **Clustering Songs with K-Means**"
+        "# **Şarkı İsimlerine Göre Veri Görselleştirmesi**"
       ]
     },
     {
